[gd_scene load_steps=5 format=3 uid="uid://c455lu0mgx6c6"]

[ext_resource type="Script" path="res://Scripts/gui.gd" id="1_lcpl7"]
[ext_resource type="Texture2D" uid="uid://b6obkfyrd5rpp" path="res://Images/Simple Tower Defense/Towers/Combat Towers/spr_tower_archer.png" id="2_27em6"]
[ext_resource type="Texture2D" uid="uid://ccxwvsxgesyev" path="res://Images/Simple Tower Defense/Towers/Combat Towers/spr_tower_fire_wizard.png" id="3_vg78n"]
[ext_resource type="Texture2D" uid="uid://bonpeaq4hcres" path="res://Images/Simple Tower Defense/Towers/Combat Towers/spr_tower_lightning_wizard.png" id="4_5aff1"]

[node name="GUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_lcpl7")

[node name="CheckButton" type="CheckButton" parent="."]
process_mode = 3
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -44.0
offset_top = -24.0
grow_horizontal = 0
grow_vertical = 0
text = "Pause"

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -158.0
offset_bottom = 23.0
grow_horizontal = 0
text = "Coins: 0"
horizontal_alignment = 2

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -88.0
offset_top = -40.0
offset_right = 88.0
grow_horizontal = 2
grow_vertical = 0

[node name="ArcherButton" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "$10"
icon = ExtResource("2_27em6")

[node name="FireButton" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "$10"
icon = ExtResource("3_vg78n")

[node name="LightningButton" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "$10"
icon = ExtResource("4_5aff1")

[connection signal="toggled" from="CheckButton" to="." method="_on_check_button_toggled"]
[connection signal="pressed" from="HBoxContainer/ArcherButton" to="." method="_on_archer_button_pressed"]
[connection signal="pressed" from="HBoxContainer/FireButton" to="." method="_on_fire_button_pressed"]
[connection signal="pressed" from="HBoxContainer/LightningButton" to="." method="_on_lightning_button_pressed"]
